Swagger собирает без ошибок при отключенном spring-boot-maven-plugin (psvm)
