# src/main/java/com/example/codeengine/expense/controller/CategoryController.java
@@ -23,7 +23,7 @@ import java.util.Collection;
 import java.util.Optional;
 
 @RestController
-@RequestMapping("/api")
+@RequestMapping("/")
 //@Api(description = "Контроллер Категорий")
 public class CategoryController {
 //    @Autowired
